syntax = "proto3";

package partyaffairs.api.partyaffairs.task.v1;
option go_package = "./v1;v1";

import "validate/validate.proto";

message GetTaskReply{
  uint32 id = 1;
  string title = 2;
  string description = 3;
  optional bool isUpdate = 4;
  uint32 start = 5;
  uint32 end = 6;
  string config = 7;
  uint32 createdAt = 8;
  uint32 updatedAt = 9;
}

message GetTaskRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message ListTaskRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string title = 3;
}

message ListTaskReply{
  message Task{
    uint32 id = 1;
    string title = 2;
    string description = 3;
    optional bool isUpdate = 4;
    uint32 start = 5;
    uint32 end = 6;
    string config = 7;
    uint32 createdAt = 8;
    uint32 updatedAt = 9;
  }
  uint32 total = 1;
  repeated Task list = 2;
}

message ListClientTaskRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string title = 3;
  optional bool notFinish = 4;
}

message ListClientTaskReply{
  message Task{
    uint32 id = 1;
    string title = 2;
    string description = 3;
    optional bool isUpdate = 4;
    uint32 start = 5;
    uint32 end = 6;
    string config = 7;
    uint32 createdAt = 8;
    uint32 updatedAt = 9;
  }
  uint32 total = 1;
  repeated Task list = 2;
}

message CreateTaskRequest {
  string title = 1[(validate.rules).string = {min_len: 1}];
  string description = 2[(validate.rules).string = {min_len: 1}];
  optional bool isUpdate = 3;
  uint32 start = 4[(validate.rules).uint32 = {gt: 1}];
  uint32 end = 5[(validate.rules).uint32 = {gt: 1}];
  string config = 6[(validate.rules).string = {min_len: 1}];
}

message CreateTaskReply{
  uint32 id = 1;
}

message UpdateTaskRequest {
  string title = 1;
  string description = 2;
  optional bool isUpdate = 3;
  uint32 start = 4;
  uint32 end = 5;
  string config = 6;
  uint32 id = 7[(validate.rules).uint32 = {gt: 0}];
}

message UpdateTaskReply{}

message DeleteTaskRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message DeleteTaskReply{}


